--- a/webroot/chat/index.html
+++ b/webroot/chat/index.html
@@ -24,7 +24,7 @@
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="./js/chatfunctions.js"></script>
     <script language="javascript" type="text/javascript">
-        var wsUri = "ws://"+ location.host+"/api/v1/chat";
+        var wsUri = "ws://"+ location.host+"/api/v1/chat/socket";
         var httpURI = "http://"+location.host+"/";
         var output, input, userid, chatid, send;
         var ws_params = {"channel":"trial1"};
